# xad-py

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  build_extensions.py  pyproject.toml
.github/: SECURITY.md  boring-cyborg.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: wheels.yml
samples/: adj_1st.py  fwd_1st.py  swap_pricer.py
src/: CMakeLists.txt  exceptions.hpp  math.hpp  module.cpp  real.hpp  tape.hpp
tests/: test_exceptions.py  test_math_functions_derivatives.py  test_package.py  test_real_operations.py  test_tape.py
xad/: __init__.py
xad/adj_1st/: __init__.py
xad/exceptions/: __init__.py
xad/fwd_1st/: __init__.py
xad/math/: __init__.py
